--- a/DentalClinicReservationAndManagementSystem/Views/Shared/_Layout.cshtml
+++ b/DentalClinicReservationAndManagementSystem/Views/Shared/_Layout.cshtml
@@ -1,10 +1,14 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <title>@ViewBag.Title</title>
     <meta charset="utf-8" />
-    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="Book an appointment with experienced dentists at Krishna Dental Clinic, Pondicherry. We offer general, cosmetic, pediatric, and laser dental care." />
+    <meta name="keywords" content="dental clinic Pondicherry, dentist Pondicherry, Krishna Dental Pondicherry, cosmetic dentistry, pediatric dentist, teeth whitening, dental implants, laser dental treatment, smile designing, family dentistry" />
+    <meta name="author" content="SoftBizGen">
+    <title>Krishna Dental Clinic - Best Dental Care in Pondicherry</title>
+    <link rel="icon" type="image/png" href="~/Content/images/logo3.png" />
+
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,500,600,700" rel="stylesheet">
     <link rel="stylesheet" href="@Url.Content("../../Content/css/open-iconic-bootstrap.min.css")">
     <link rel="stylesheet" href="@Url.Content("../../Content/css/animate.css")">
@@ -18,6 +22,52 @@
     <link rel="stylesheet" href="@Url.Content("../../Content/css/flaticon.css")">
     <link rel="stylesheet" href="@Url.Content("../../Content/css/icomoon.css")">
     <link rel="stylesheet" href="@Url.Content("../../Content/css/style.css")">
+    <script type="application/ld+json">
+        {
+          "@@context": "https://schema.org",
+          "@@type": "Dentist",
+          "name": "Krishna Dental Clinic",
+          "image": "https://krishnadent.com/Content/images/logo3.png",
+          "@@id": "https://krishnadent.com",
+          "url": "https://krishnadent.com",
+          "telephone": "+91-9190144066",
+          "address": {
+            "@@type": "PostalAddress",
+            "streetAddress": "NO.130, Kamaraj Salai, Puducherry - 605013",
+            "addressLocality": "Pondicherry",
+            "postalCode": "605001",
+            "addressCountry": "IN"
+          },
+          "geo": {
+            "@@type": "GeoCoordinates",
+            "latitude": 11.9365,
+            "longitude": 79.8306
+          },
+          "openingHoursSpecification": [
+            {
+              "@@type": "OpeningHoursSpecification",
+              "dayOfWeek": [
+                "Monday",
+                "Tuesday",
+                "Wednesday",
+                "Thursday",
+                "Friday",
+                "Saturday",
+                "Sunday"
+              ],
+              "opens": "9:30am - 1:30pm",
+              "closes":"4:30am - 9:30pm"
+            }
+          ],
+          "sameAs": [
+            "https://www.facebook.com/profile.php?id=61574878299853",
+            "https://www.instagram.com/krishnadent/#"
+          ],
+
+          "description": "Krishna Dental Clinic offers expert dental services in Pondicherry, including general dentistry, cosmetic dentistry, pediatric care, and laser treatments."
+        }
+    </script>
+
     <style>
         @@keyframes scroll-left {
             0% {
@@ -58,7 +108,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            text-align: center;        
+            text-align: center;
             gap: 15px; /* Space between menu items */
         }
 
@@ -107,9 +157,6 @@
                 width: 100%;
                 left: 0;
             }
-
-
-
     </style>
 
 
