--- a/DentalClinicReservationAndManagementSystem/Views/Home/Index.cshtml
+++ b/DentalClinicReservationAndManagementSystem/Views/Home/Index.cshtml
@@ -1118,7 +1118,7 @@
                     <p>Established in 2025, Krishna Dental Clinic aims to provide high-quality dental care with advanced technology.</p>
                     <ul class="ftco-footer-social list-unstyled d-flex justify-content-center justify-content-md-start">
                         <li class="mx-2"><a href="#"><i class="fab fa-twitter fa-lg text-primary"></i></a></li>
-                        <li class="mx-2"><a href="https://www.facebook.com/profile.php?id=61574878299853"><i class="fab fa-facebook-f fa-lg text-primary"></i></a></li>
+                        <li class="mx-2"><a href="https://www.facebook.com/profile.php?id=61574878299853" target="_blank"><i class="fab fa-facebook-f fa-lg text-primary"></i></a></li>
                         <li class="mx-2"><a href="https://www.instagram.com/krishnadent" target="_blank"><i class="fab fa-instagram fa-lg text-danger"></i></a></li>
                     </ul>
                 </div>
