--- a/DentalClinicReservationAndManagementSystem/Views/Home/Index.cshtml
+++ b/DentalClinicReservationAndManagementSystem/Views/Home/Index.cshtml
@@ -313,7 +313,7 @@
         <div class="overlay" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.5);"></div>
         <div class="container-fluid h-100">
             <div class="row slider-text align-items-center justify-content-center h-100">
-                
+
             </div>
         </div>
     </div>
@@ -321,7 +321,7 @@
         <div class="overlay" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.5);"></div>
         <div class="container-fluid h-100">
             <div class="row slider-text align-items-center justify-content-center h-100">
-               
+
             </div>
         </div>
     </div>
@@ -329,7 +329,7 @@
         <div class="overlay" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.5);"></div>
         <div class="container-fluid h-100">
             <div class="row slider-text align-items-center justify-content-center h-100">
-                
+
             </div>
         </div>
     </div>
@@ -338,13 +338,13 @@
         <div class="container-fluid h-100">
             <div class="row slider-text align-items-center justify-content-center h-100">
                 @*<div class="col-md-10 col-lg-8 text ftco-animate p-4 text-center text-md-left">
-                    <h1 class="mb-4" style="font-size: 4vw; font-weight: bold; text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5); color: crimson;">
-                        Smile Makes <br><span style="color: #f8d210;">A Lasting Impression</span>
-                    </h1>
-                    <h3 class="subheading" style="font-size: 2vw; font-weight: bold; font-style: italic; color: crimson;">
-                        Your Health is Our Top Priority with Comprehensive, Affordable Medical.
-                    </h3>
-                </div>*@
+                        <h1 class="mb-4" style="font-size: 4vw; font-weight: bold; text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5); color: crimson;">
+                            Smile Makes <br><span style="color: #f8d210;">A Lasting Impression</span>
+                        </h1>
+                        <h3 class="subheading" style="font-size: 2vw; font-weight: bold; font-style: italic; color: crimson;">
+                            Your Health is Our Top Priority with Comprehensive, Affordable Medical.
+                        </h3>
+                    </div>*@
             </div>
         </div>
     </div>
@@ -354,13 +354,13 @@
         <div class="container-fluid h-100">
             <div class="row slider-text align-items-center justify-content-center h-100">
                 @*<div class="col-md-10 col-lg-8 text ftco-animate p-4 text-center text-md-left">
-                    <h1 class="mb-4" style="font-size: 4vw; font-weight: bold; text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5); color: firebrick;">
-                        Bringing Care <span style="color: #f8d210;">To Your Family</span>
-                    </h1>
-                    <h3 class="subheading" style="font-size: 2vw; font-style: italic; font-weight: bold; color: firebrick;">
-                        We Ensure the Best Medical Services for You and Your Loved Ones
-                    </h3>
-                </div>*@
+                        <h1 class="mb-4" style="font-size: 4vw; font-weight: bold; text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5); color: firebrick;">
+                            Bringing Care <span style="color: #f8d210;">To Your Family</span>
+                        </h1>
+                        <h3 class="subheading" style="font-size: 2vw; font-style: italic; font-weight: bold; color: firebrick;">
+                            We Ensure the Best Medical Services for You and Your Loved Ones
+                        </h3>
+                    </div>*@
             </div>
         </div>
     </div>
@@ -1118,7 +1118,7 @@
                     <p>Established in 2025, Krishna Dental Clinic aims to provide high-quality dental care with advanced technology.</p>
                     <ul class="ftco-footer-social list-unstyled d-flex justify-content-center justify-content-md-start">
                         <li class="mx-2"><a href="#"><i class="fab fa-twitter fa-lg text-primary"></i></a></li>
-                        <li class="mx-2"><a href="https://www.facebook.com/profile.php?id=61574878299853"><i class="fab fa-facebook-f fa-lg text-primary"></i></a></li>
+                        <li class="mx-2"><a href="https://www.facebook.com/profile.php?id=61574878299853" target="_blank"><i class="fab fa-facebook-f fa-lg text-primary"></i></a></li>
                         <li class="mx-2"><a href="https://www.instagram.com/krishnadent" target="_blank"><i class="fab fa-instagram fa-lg text-danger"></i></a></li>
                     </ul>
                 </div>
@@ -1193,6 +1193,7 @@
     </div>
 </footer>
 
+
 <style>
     /* Footer Background */
     .ftco-footer {
@@ -1245,6 +1246,7 @@
         }
     }
 </style>
+
 
 @section Scripts
     {
@@ -1408,6 +1410,7 @@
             setInterval(updateData, 9000);
         });
     </script>
+
 
 
 }
