--- a/DentalClinicReservationAndManagementSystem/Views/Shared/_Layout.cshtml
+++ b/DentalClinicReservationAndManagementSystem/Views/Shared/_Layout.cshtml
@@ -196,7 +196,7 @@
             📢 Book your appointment today! | Get a free consultation for new patients! | Call us at +91-9790144066
         </div>
     </div>
-    <nav class="navbar navbar-expand-lg navbar-lite bg-light ftco-navbar-light" id="ftco-navbar">
+    <nav class="navbar navbar-expand-lg" id="ftco-navbar">
         <div class="container">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
                     aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
@@ -208,22 +208,22 @@
                         @Html.ActionLink("Home", "Index", "Home", new { @class = "nav-link p-1" })
                     </li>
                     <li class="nav-item">
-                        <a href="#About-Section" class="nav-link p-1">ABOUT</a>
+                        <a href="#About-Section" class="nav-link">ABOUT</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#Service-Section" class="nav-link p-1">SERVICES</a>
+                        <a href="#Service-Section" class="nav-link">SERVICES</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#contactus-section" class="nav-link p-1">CONTACT US</a>
+                        <a href="#contactus-section" class="nav-link">CONTACT US</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#Doctors-Section" class="nav-link p-1">OUR DENTIST</a>
+                        <a href="#Doctors-Section" class="nav-link">OUR DENTIST</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#appointment-section" class="nav-link p-1">MAKE AN APPOINTMENT</a>
+                        <a href="#appointment-section" class="nav-link">MAKE AN APPOINTMENT</a>
                     </li>
                     <li class="nav-item">
-                        @Html.ActionLink("Dentist Arena", "DentistLogin", "Home", new { @class = "nav-link p-1" })
+                        @Html.ActionLink("ADMIN", "DentistLogin", "Home", new { @class = "nav-link p-1" })
                     </li>
                 </ul>
             </div>
