--- a/DentalClinicReservationAndManagementSystem/Views/Home/Index.cshtml
+++ b/DentalClinicReservationAndManagementSystem/Views/Home/Index.cshtml
@@ -12,6 +12,9 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 
 <style>
+    body {
+        font-family: 'Poppins', sans-serif;
+    }
     .transparent-input {
         background: transparent !important;
         border: 1px solid rgba(255, 255, 255, 0.5);
